gitops/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: qbittorrent
        image: ghcr.io/onedr0p/qbittorrent:4.5.4
        ports:
        - containerPort: 8080
          name: webui
          protocol: TCP
        - containerPort: 6881
          name: traffic
          protocol: TCP
        - containerPort: 6881
          name: traffic-udp
          protocol: UDP
        volumeMounts:
        - name: qbittorrent-config
          mountPath: /config
        - name: torrents
          mountPath: /data/torrents
        - name: vuetorrent
          mountPath: /vuetorrent
      volumes:
      - name: qbittorrent-config
        persistentVolumeClaim:
          claimName: qbittorrent-config
      - name: torrents
        hostPath:
          path: /data/torrents
          type: Directory
      - name: vuetorrent
        emptyDir:
          sizeLimit: 500Mi
