gitops/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  ports:
  - name: app
    port: 80
    targetPort: 8080
    protocol: TCP
    appProtocol: http
  - name: traffic
    port: 6881
    targetPort: 6881
    protocol: TCP
    appProtocol: TCP
  - name: traffic-udp
    port: 6881
    targetPort: 6881
    protocol: UDP
    appProtocol: UDP
  selector:
    app: qbittorrent
