gitops/qbittorrent/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  parentRefs:
  - name: main
    namespace: cilium-gateway
    sectionName: https-qbittorrent
  hostnames:
  - qbittorrent.sync.lt
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: qbittorrent
      port: 80
